--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body, html {
 
 .container {
   position: relative;
-  background-image: url("../images/misty_forest_night.png");
+  background-image: url("../images/misty_forest_night.jpeg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
