--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body, html {
   position: relative;
-  background-image: url("../images/misty_forest_night.jpeg");
+  background-image: url("../images/misty.forest.night.jpg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
